added shape to the room